# gridfinity-iphone-charger

./: .gitignore  .gitmodules  README.md  gridfinity-iphone-charger.scad  main.py  pyproject.toml  run.py  run_tests.py
.github/workflows/: python-ci.yml  release.yml
config/: makerworld-model-only.json  makerworld-multiplate.json
flat/: README.md
modules/: charger.scad  phone.scad  tray.scad
src/: openscad.scad
src/modifiers/: debug.scad  multiplate.scad
src/modules/: charger.scad  phone.scad  tray.scad
src/std/: config.scad  debug.scad
tests/: __init__.py  conftest.py  test_main.py  test_modifiers.py  test_run.py
