[project]
name = "gridfinity-iphone-charger"
version = "1.0.0"
description = "Gridfinity iPhone Charger OpenSCAD model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.1.0", "ruff>=0.3.0"]

[tool.setuptools]
packages = [] # Don't include any packages, we just want the run.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["."]
omit = [
    "src/gridfinity-rebuilt-openscad/**",
    "tests/**",
    ".venv/**",
    "venv/**",
    "*/site-packages/**",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["src/gridfinity-rebuilt-openscad/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long, handled by formatter
]
exclude = ["src/gridfinity-rebuilt-openscad/**"]

[tool.ruff.lint.isort]
known-first-party = ["tests"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
